# Portfolio2026

./: LICENSE  README.md  index.html  profile_README.md  site.css
assets/: site.css
file-organizer/: .gitignore  README.md  demo.html  organize.py
file-organizer/cpp/: CMakeLists.txt  build.bat
file-organizer/cpp/src/: main.cpp  organizer.cpp  organizer.hpp
file-organizer/cpp/tests/: test_organizer.cpp
matching-engine/: .gitignore  README.md  book.py  demo.py  order.py  orderbook_terminal.html  reference_scenario.txt  reference_trace.py  requirements.txt
matching-engine/cpp/: CMakeLists.txt  build.bat
matching-engine/cpp/bench/: benchmark.cpp
matching-engine/cpp/src/: order.hpp  order_book.cpp  order_book.hpp  reference_trace.cpp
matching-engine/cpp/tests/: test_order_book.cpp
matching-engine/matching_engine/: __init__.py  book.py
matching-engine/tests/: test_book.py
ml-housing/: .gitignore  README.md  demo.html  export_model.py  export_split.py  house_price_regression.py  requirements.txt
ml-housing/cpp/: CMakeLists.txt  build.bat
ml-housing/cpp/src/: main.cpp  regression.cpp  regression.hpp
ml-housing/cpp/tests/: test_regression.cpp
ml-housing/data/: housing.csv  split_indices.txt
security-log-analyzer/: .gitignore  README.md  analyze.py  collect_linux.sh  collect_macos.sh  collect_windows.ps1  demo.html  requirements.txt
security-log-analyzer/csharp/src/SecurityLogAnalyzer/: Detectors.cs  LogLoader.cs  Models.cs  Program.cs  Report.cs  SecurityLogAnalyzer.csproj
security-log-analyzer/csharp/tests/SecurityLogAnalyzer.Tests/: DetectorTests.cs  SecurityLogAnalyzer.Tests.csproj
security-log-analyzer/data/: auth_events.jsonl
task-tracker/: .gitignore  README.md  demo.html
task-tracker/backend/: app.py
task-tracker/csharp/src/TaskTracker.Api/: Models.cs  Program.cs  TaskDbContext.cs  TaskTracker.Api.csproj
task-tracker/csharp/tests/TaskTracker.Tests/: ApiTests.cs  TaskTracker.Tests.csproj
task-tracker/frontend/: app.js  index.html  styles.css
